# claude-code-proxy-node

./: .eslintrc.json  .gitignore  README.fork.md  README.md  cli.py  package-lock.json  package.json  pyproject.toml  readme.new.md  requirements.txt  run.sh  tsconfig.json
docs/: development-progress.md
src/: app.ts  server.ts
src/ccp/: cli.py  server.py
src/config/: environment.ts  logger.ts
src/middleware/: errors.ts  logging.ts
src/routes/: health.ts  messages.ts
src/services/: litellm-client.ts
src/types/: anthropic.ts
src/utils/: model-mapper.ts  port-finder.ts
