[project]
name = "ccp"
version = "0.1.0"
description = "Claude code Proxy via LiteLLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "uvicorn>=0.34.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "litellm>=1.40.14",
]

[project.scripts]
ccp = "ccp.cli:app"

[tool.setuptools]
packages = ["ccp"]
package_dir = {"" = "src"}
